# rm3100-pico

./: .gitignore  CMakeLists.txt  LICENSE  README.md  magnetic-moment.py  plots.py  record_data.py  requirements.txt  rm3100-pico.cpp
0-troubleshooting/blink/: pico_sdk_import.cmake
analysis/: I10-1_analysis.txt  I5-1_analysis.txt  I5-2_analysis.txt  O5-1_analysis.txt  O5-2_analysis.txt
analysis/means/: A-1_means.txt  A-2_means.txt  I10-1_means.txt  I5-1_means.txt  I5-2_means.txt  O5-1_means.txt  O5-2_means.txt
blink/: CMakeLists.txt  blink.cpp
cpp/: Rm3100-readout.ino  Rm3100.cpp  Rm3100.h
data-analysis/: plots.py  record_data.py
data-analysis/output/: magnetometer_data.csv
i2c-device-scanner/: CMakeLists.txt  main.cpp
output/: A-1.csv  A-2.csv  I10-1.csv  I10-2.csv  I5-1.csv  I5-2.csv  O10-1.csv  O10-2.csv  O5-1.csv  O5-2.csv  magnetometer_data.csv
readout/: CMakeLists.txt  readout.cpp  rm3100-pico.cpp
